name:                sql-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mckeankylej/sql-server#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Unique
  build-depends:       base >= 4.7 && < 5
                     , liquidhaskell
                     , vector
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
                     , containers
  default-language:    Haskell2010

executable sql-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sql-server
  default-language:    Haskell2010

test-suite sql-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sql-server
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
                     , vector
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/sql-server
